discussion/kv_engine/178792/178792_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Meter RangeScan key/values

Add calls to account for key or key+value as the scan reads
data.

Change-Id: Ice5153c0635c3084d4f50345879c8f704a2dc7f9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-12 10:33:38.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-12 11:05:38.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19411/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:51:37: error: member access into incomplete type "CookieIface" [clang-diagnostic-error]
    const_cast<CookieIface&>(cookie).addDocumentReadBytes(key.size());
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:15:7: note: forward declaration of "CookieIface"
class CookieIface;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:59:37: error: member access into incomplete type "CookieIface" [clang-diagnostic-error]
    const_cast<CookieIface&>(cookie).addDocumentReadBytes(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:15:7: note: forward declaration of "CookieIface"
class CookieIface;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19411/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:51:37:
error: member access into incomplete type "CookieIface" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19411/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40577/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:51:37:
error: member access into incomplete type "CookieIface"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40577/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21699/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [66/91]: dcp rollback after purge...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:6086 Test failed: `" (Expected `4", got `0" - purge_seqno didn"t match expected value)
[2022-08-12T10:40:36.617Z] (68 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21699/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18623/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48303/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9198/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9101/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21348/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20596/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29725/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
